--- a/tray/Cargo.toml
+++ b/tray/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Ell <alan@cattes.us>"]
 edition = "2018"
 
 [dependencies]
+crossbeam = "0.7"
+lazy_static = "1.4.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi= { version = "0.3.8", features = ["shellapi", "libloaderapi", "errhandlingapi", "impl-default"] }
